package energy.eddie.dataneeds.needs.aiida;

import com.fasterxml.jackson.annotation.JsonProperty;
import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
import com.fasterxml.jackson.databind.annotation.JsonSerialize;
import energy.eddie.dataneeds.needs.DataNeed;
import energy.eddie.dataneeds.needs.TimeframedDataNeed;
import energy.eddie.dataneeds.utils.cron.CronExpressionConverter;
import energy.eddie.dataneeds.utils.cron.CronExpressionDeserializer;
import energy.eddie.dataneeds.utils.cron.CronExpressionSerializer;
import energy.eddie.dataneeds.validation.aiida.asset.AiidaAsset;
import energy.eddie.dataneeds.validation.aiida.schema.AiidaSchema;
import energy.eddie.dataneeds.validation.aiida.schema.IsValidAiidaSchema;
import io.swagger.v3.oas.annotations.media.Schema;
import jakarta.persistence.*;
import jakarta.validation.constraints.NotEmpty;
import org.springframework.scheduling.support.CronExpression;

import java.util.Set;

@Entity
@Table(name = "aiida_data_need", schema = "data_needs")
@IsValidAiidaSchema
@SuppressWarnings("NullAway")
public class AiidaDataNeed extends TimeframedDataNeed {
    public static final String DISCRIMINATOR_VALUE = "aiida";

    @Column(name = "transmission_schedule", nullable = false)
    @Convert(converter = CronExpressionConverter.class)
    @JsonProperty(required = true)
    @JsonSerialize(using = CronExpressionSerializer.class)
    @JsonDeserialize(using = CronExpressionDeserializer.class)
    @Schema(description = "The schedule in cron format, at which the AIIDA instance should send data.")
    private CronExpression transmissionSchedule;

    @Schema(description = "Define the schema for the outgoing data (Raw, CIM, Saref)")
    @ElementCollection(fetch = FetchType.EAGER)
    @CollectionTable(name = "aiida_data_need_schemas",
            joinColumns = @JoinColumn(name = "data_need_id"),
            schema = "data_needs")
    @Column(name = "schema")
    @JsonProperty(required = true)
    @Enumerated(EnumType.STRING)
    @NotEmpty(message = "must contain at least one schema")
    private Set<AiidaSchema> schemas;

    @Column(name = "asset", nullable = false)
    @JsonProperty(required = true)
    @Schema(description = "The kind of asset the data is retrieved from ('CONNECTION-AGREEMENT-POINT', 'CONTROLLABLE-UNIT', 'DEDICATED-MEASUREMENT-DEVICE', 'SUBMETER')")
    @Enumerated(EnumType.STRING)
    private AiidaAsset asset;

    @ElementCollection
    @CollectionTable(name = "aiida_data_need_data_tags",
            joinColumns = @JoinColumn(name = "data_need_id"),
            schema = "data_needs")
    @Column(name = "data_tag")
    @JsonProperty(required = true)
    @NotEmpty(message = "must contain at least one data tag")
    private Set<String> dataTags;

    public AiidaDataNeed(Set<String> dataTags) {
        this.dataTags = dataTags;
    }

    @SuppressWarnings("NullAway.Init")
    protected AiidaDataNeed() {
    }

    /**
     * @param dataNeed the data need to check
     * @return true if the data need is an AiidaDataNeed
     */
    public static boolean isAiidaDataNeed(DataNeed dataNeed) {
        return dataNeed instanceof AiidaDataNeed;
    }

    /**
     * Returns the schedule in cron format, at which the AIIDA instance should send data.
     */
    public CronExpression transmissionSchedule() {
        return transmissionSchedule;
    }

    /**
     * Returns the schema for the outgoing data
     *
     * @see AiidaSchema
     */
    public Set<AiidaSchema> schemas() {
        return schemas;
    }

    /**
     * Returns the kind of asset the data is retrieved from
     *
     * @see AiidaAsset
     */
    public AiidaAsset asset() {
        return asset;
    }

    /**
     * Returns the set of identifiers for the data that should be shared by the AIIDA instance.
     */
    public Set<String> dataTags() {
        return dataTags;
    }
}
