@startuml
abstract DataNeed {
    id String
    name String
    description String
    purpose String
    policyLink URL
}

class AccountingPointDataNeed {
}

abstract TimeframedDataNeed {
    duration DataNeedDuration
}

class ValidatedHistoricalDataDataNeed {
    minGranularity Granularity
    maxGranularity Granularity
    energyType EnergyType
}

enum EnergyType {
    ELECTRICITY
    NATURAL_GAS
    HYDROGEN
    HEAT
}

enum AiidaSchema {
    SMART_METER_P1_RAW
    SMART_METER_P1_CIM
}

enum AiidaAsset {
    CONNECTION_AGREEMENT_POINT
    CONTROLLABLE_UNIT
    DEDICATED_MEASUREMENT_DEVICE
    SUBMETER
}

abstract DataNeedDuration

abstract RelativeDuration {
    start Duration<ISO8601>
    end Duration<ISO8601>
    stickToStartOfCalendarUnit boolean
    stickyStartCalendarUnit CalendarUnit
}

abstract AbsoluteDuration {
    start Date
    end Date
}

class AiidaDataNeed {
    transmissionSchedule String<CronExpression>
    schemas Set<AiidaSchema>
    asset AiidaAsset
    dataTags Set<String>
}

DataNeed <|-- AccountingPointDataNeed
DataNeed <|-- TimeframedDataNeed

TimeframedDataNeed -- DataNeedDuration

TimeframedDataNeed <|-- ValidatedHistoricalDataDataNeed

ValidatedHistoricalDataDataNeed -- EnergyType

DataNeedDuration <|-- AbsoluteDuration
DataNeedDuration <|-- RelativeDuration

AiidaDataNeed -- AiidaAsset
AiidaDataNeed -- AiidaSchema

TimeframedDataNeed <|-- AiidaDataNeed
@enduml
